# sam-3d-objects

./: .gitignore  CONTRIBUTING.md  README.md  demo.py  multi_obj_demo.py  pyproject.toml  requirements.dev.txt  requirements.inference.txt  requirements.p3d.txt  requirements.txt
doc/: setup.md
environments/: default.yml
notebook/: demo_3db_mesh_alignment.ipynb  demo_multi_object.ipynb  demo_single_object.ipynb  inference.py  mesh_alignment.py
notebook/meshes/human_object/3DB_results/: focal_length.json  human.ply
notebook/meshes/human_object/3Dfy_results/: 0.glb
patching/: hydra
sam3d_objects/: __init__.py
sam3d_objects/model/backbone/dit/embedder/: dino.py  embedder_fuser.py
sam3d_objects/model/backbone/generator/flow_matching/: model.py
sam3d_objects/model/backbone/generator/shortcut/: model.py
sam3d_objects/model/backbone/tdfy_dit/models/: __init__.py  mm_latent.py  mot_sparse_structure_flow.py  sparse_structure_flow.py  sparse_structure_vae.py  structured_latent_flow.py  timestep_embedder.py
sam3d_objects/model/backbone/tdfy_dit/models/structured_latent_vae/: __init__.py  base.py  decoder_gs.py  decoder_mesh.py  decoder_rf.py  encoder.py
sam3d_objects/model/backbone/tdfy_dit/utils/: postprocessing_utils.py  render_utils.py
sam3d_objects/pipeline/: inference_pipeline.py  inference_pipeline_pointmap.py
